--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -12,6 +12,12 @@ jobs:
       -
         name: Checkout
         uses: actions/checkout@v3
+      - 
+        name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'adopt'
       -
         name: Login to Docker Hub
         uses: docker/login-action@v2
