Add args for springboot service on docker-compose Add custom mysql image with creation of player table using docker entrypoint
Ref #2

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,16 +8,20 @@ services:
     restart: always
     depends_on:
       - db
+    environment: # Pass environment variables to the service
+      SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/polyglot?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
     networks:
       - backend
 
   db:
-    image: mysql:5.7
+    build:
+      context : .
+      dockerfile: ./DockerfileMysql
     ports:
       - "3306:3306"
     restart: always
     environment:
-      MYSQL_DATABASE: 'db'
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
       MYSQL_USER : ${MYSQL_USER}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
@@ -25,6 +29,7 @@ services:
       - '3306'
     volumes:
       - my-db:/var/lib/mysql
+      - ./mysql/init:/docker-entrypoint-initdb.d/:ro
     networks:
       - backend
 
