--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
 FROM openjdk:17
-ARG JAR_FILE=Back-End/slu-polyglot/build/libs/\*.jar
+ARG JAR_FILE=../Back-End/slu-polyglot/build/libs/\*.jar
 COPY ${JAR_FILE} app.jar
 ENTRYPOINT ["java","-jar","/app.jar"]
