Use own mysql custom image instead of build it
Ref #2

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -19,9 +19,7 @@ services:
 
   db:
     <<: *common-settings-config
-    build:
-      context : .
-      dockerfile: ./DockerfileMysql
+    image: ${CUSTOM_IMAGE_MYSQL}
     ports:
       - "3306:3306"
     environment:
