--- a/Front-End/DockerfileReact
+++ b/Front-End/DockerfileReact
@@ -6,6 +6,10 @@ WORKDIR /app
 # add `/app/node_modules/.bin` to $PATH
 ENV PATH /app/node_modules/.bin:$PATH
 
+# Arguments
+ARG REACT_APP_API_BASE_URL
+ENV REACT_APP_API_BASE_URL=http://be:8080/
+
 # install app dependencies
 COPY package.json ./
 COPY package-lock.json ./
