--- a/Back-End/slu-polyglot/build.gradle
+++ b/Back-End/slu-polyglot/build.gradle
@@ -18,6 +18,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'com.google.code.gson:gson:2.8.5'
 	testImplementation 'junit:junit:4.13'
 }
 
