--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -13,14 +13,14 @@ services:
       - db
       - fe
     environment: # Pass environment variables to the service
-      SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/polyglot?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+      SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/polyglot?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
     networks:
       - backend
       - frontend
 
   db:
     <<: *common-settings-config
-    image: mysql:5.7.41-debian
+    image: mysql:latest
     ports:
       - "3306:3306"
     environment:
