Fix file not found on jar build
Ref #2

--- a/Back-End/slu-polyglot/build.gradle
+++ b/Back-End/slu-polyglot/build.gradle
@@ -26,3 +26,4 @@ tasks.named('test') {
 	useJUnitPlatform()
 	finalizedBy jacocoTestReport
 }
+tasks.withType(Jar).all { duplicatesStrategy 'exclude' }
