--- a/Front-End/DockerfileReact
+++ b/Front-End/DockerfileReact
@@ -8,7 +8,7 @@ ENV PATH /app/node_modules/.bin:$PATH
 
 # Arguments
 ARG REACT_APP_API_BASE_URL
-ENV REACT_APP_API_BASE_URL=https://apipolyglot.alessandrosangiorgi.net
+ENV REACT_APP_API_BASE_URL=https://apipolyglot.alessandrosangiorgi.net/
 
 # install app dependencies
 COPY package.json ./
