--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/checkout@v3
       - 
         name: Setup SSH
-        run: |
+        run:
           echo "${{ secrets.VPS_SSH_KEY }}" > private_key
           chmod 600 private_key
           echo -e "Host *\n\tStrictHostKeyChecking no\n\tUserKnownHostsFile=/dev/null\n" > ssh_config
@@ -25,8 +25,8 @@ jobs:
         env:
           VPS_HOST: ${{ secrets.VPS_HOST }}
           VPS_USER: ${{ secrets.VPS_USER }}
-      run: |
-        ssh -F ssh_config -i private_key $VPS_USER@$VPS_HOST "cd /home/fulvius/Polyglot && git pull && cd docker && docker-compose pull && docker-compose up --remove-orphans --force-recreate -d "
+        run:
+          ssh -F ssh_config -i private_key $VPS_USER@$VPS_HOST "cd /home/fulvius/Polyglot && git pull && cd docker && docker-compose pull && docker-compose up --remove-orphans --force-recreate -d "
       - 
         name: Set up JDK 17
         uses: actions/setup-java@v3
