--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -17,6 +17,7 @@ jobs:
       - 
         name: Setup SSH
         run:
+          umask 0077
           echo "${{ secrets.VPS_SSH_KEY }}" > private_key
           sudo apt-get install -y sshpass
           ssh-keyscan -H ${{ secrets.VPS_HOST }} >> known_hosts
@@ -26,7 +27,6 @@ jobs:
           VPS_HOST: ${{ secrets.VPS_HOST }}
           VPS_USER: ${{ secrets.VPS_USER }}
         run:
-          chmod 600 private_key
           ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=known_hosts -i private_key $VPS_USER@$VPS_HOST "cd /home/fulvius/Polyglot && git pull && cd docker && docker-compose pull && docker-compose up --remove-orphans --force-recreate -d "
       - 
         name: Set up JDK 17
