--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -16,8 +16,10 @@ jobs:
         uses: actions/checkout@v3
       - 
         name: Setup SSH
+        env:
+          VPS_SSH_KEY: ${{ secrets.VPS_SSH_KEY }}
         run:
-          echo "${{ secrets.VPS_SSH_KEY }}" > private_key
+          echo "$VPS_SSH_KEY" > private_key
           sudo chmod 600 private_key
           sudo apt-get install -y sshpass
           ssh-keyscan -H ${{ secrets.VPS_HOST }} >> known_hosts
