--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -31,8 +31,8 @@ jobs:
           VPS_USER: ${{ secrets.VPS_USER }}
         run:
           ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=known_hosts $VPS_USER@$VPS_HOST <<EOF
-          $VPS_SSH_KEY
-          cd /home/fulvius/Polyglot && git pull && cd docker && docker-compose pull && docker-compose up --remove-orphans --force-recreate -d
+          $(echo "${{ secrets.VPS_SSH_KEY }}")
+          cd /home/***/Polyglot && git pull && cd docker && docker-compose pull && docker-compose up --remove-orphans --force-recreate -d
           EOF
       - 
         name: Set up JDK 17
